--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/WONDevelopment/explorer",
   "license": "MIT",
   "scripts": {
+    "prestart": "pgrep mongod || mongod --dbpath data --fork --logpath /dev/null",
     "start": "concurrently \"node tools/sync.js \" \"node app.js\" ",
     "pretest": "copyfiles app.js app/  ",
     "test": "./node_modules/.bin/mocha --reporter spec  "
@@ -21,7 +22,9 @@
     "rlp": "^2.0.0",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
-    "solc": "^0.4.19"
+    "solc": "^0.4.19",
+    "ethereumjs-util": "^6.0.0",
+    "number-to-bn": "^1.7.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
