--- a/config.json
+++ b/config.json
@@ -12,14 +12,14 @@
         "title": "Won Block Explorer",
         "author": "World open network",
         "contact": "mailto:wonexplorer@worldopennetwork.net",
-        "about": "This is an open source Blockchain Explorer. Basic off ethereumproject/explorer.",
+        "about": "This is an open source Blockchain Explorer. ",
         "rss": "https://worldopennetwork.net",
         "reddit": "https://www.reddit.com/r/WOB",
         "twitter": "https://twitter.com/won",
         "linkedin": "https://www.linkedin.com/company/worldopennetwork",
         "github": "https://github.com/WONDevelopment",
         "logo": "/img/explorer-logo.png",
-        "customCss": "green-haze.min.css",
+        "customCss": "blue-hoki.min.css",
         "copyright": "2018 World Open Network, Inc.",
         "useEthFiat": false,
         "poweredbyCustom": false,
