--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "socket.io": "^2.0.4",
     "solc": "^0.4.19",
     "ethereumjs-util": "^6.0.0",
-    "number-to-bn": "^1.7.0"
+    "number-to-bn": "^1.7.0",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "copyfiles": "^1.2.0",
     "ethereumjs-testrpc": "^6.0.3",
-    "mocha": "^4.1.0",
-    "request": "^2.83.0"
+    "mocha": "^4.1.0"
   }
 }
