--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   - varA=`docker ps --no-trunc -q | cut -c 1-12`
   - docker pull mongo
   - docker run -d --network="container:$varA" mongo
-  - docker build -t WONDevelopment/explorer .
-  - docker run -d --network="container:$varA" WONDevelopment/explorer app.js
+  - docker build -t wondevelopment/explorer .
+  - docker run -d --network="container:$varA" wondevelopment/explorer app.js
 script:
 - npm run test
