--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "solc": "^0.4.19",
     "ethereumjs-util": "^6.0.0",
     "number-to-bn": "^1.7.0",
-    "request": "^2.83.0"
+    "request": "^2.83.0",
+    "utf8": "^3.0.0",
+    "crypto-js": "^3.1.9-1",
+    "xhr2": "^0.1.4",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "copyfiles": "^1.2.0",
-    "ethereumjs-testrpc": "^6.0.3",
+    "ganache-cli": "^6.0.3",
     "mocha": "^4.1.0"
   }
 }
