Footer: fixed description in footer

--- a/config.json
+++ b/config.json
@@ -10,9 +10,9 @@
         "symbol": "WON",
         "name": "Won",
         "title": "Won Block Explorer",
-        "author": "World open network",
+        "author": "World Open Network",
         "contact": "mailto:wonexplorer@worldopennetwork.net",
-        "about": "This is an open source Blockchain Explorer. ",
+        "about": "This is a Block Explorer and Analytics Platform for Won.",
         "rss": "https://worldopennetwork.net",
         "reddit": "https://www.reddit.com/r/WOB",
         "twitter": "https://twitter.com/won",
