1.Change the default node address to intranet address 2.Add environment variable of node address in app

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "nodeAddr":     "https://bc.1won.com",
+    "nodeAddr":     "http://10.64.15.81:8541",
     "startBlock":   0,
     "quiet":        true,
     "syncAll":      true,
