--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "repository": "https://github.com/WONDevelopment/explorer",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently \"node tools/sync.js \" \"node app.js\" ",
+    "start": "npm-run-all --parallel appSrv syncSrv",
+    "appSrv": "node app.js",
+    "syncSrv": "node tools/sync.js ",
     "pretest": "copyfiles app.js app/  ",
     "test": "./node_modules/.bin/mocha --reporter spec  ",
     "dev:mongoUp": "pgrep mongod || mongod --dbpath data --fork --logpath /dev/null",
@@ -16,6 +18,7 @@
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.12.2",
     "concurrently": "^3.5.1",
+    "npm-run-all": "^4.1.5",
     "ejs": "~2.5.7",
     "express": "^4.16.0",
     "mongoose": "^4.10.8",
