--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "repository": "https://github.com/WONDevelopment/explorer",
   "license": "MIT",
   "scripts": {
-    "start": "npm-run-all --parallel appSrv syncSrv",
-    "appSrv": "node app.js",
-    "syncSrv": "node tools/sync.js ",
+    "start": "node app.js",
     "pretest": "copyfiles app.js app/  ",
     "test": "./node_modules/.bin/mocha --reporter spec  ",
     "dev:mongoUp": "pgrep mongod || mongod --dbpath data --fork --logpath /dev/null",
@@ -18,7 +16,6 @@
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.12.2",
     "concurrently": "^3.5.1",
-    "npm-run-all": "^4.1.5",
     "ejs": "~2.5.7",
     "express": "^4.16.0",
     "mongoose": "^4.10.8",
