--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "utf8": "^3.0.0",
     "crypto-js": "^3.1.9-1",
     "xhr2": "^0.1.4",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "chai": "^4.1.2",
